--- a/index.htm
+++ b/index.htm
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- <meta name="description" content="Paymatrix enables you to pay monthly property rent and rent advances the smarter way! As a tenant, you can now pay rent on credit card, generate rent receipts and rent agreements online and avail several related services, all at a single place."> -->
-  <meta name="description" content="Refer your friends to Paymatrix and earn Rs.100/- for every successful referral. Also get Amazon vouchers and Cashbacks. Earn as much as Rs.5000/-* by simply sharing your referral link.">
+  <!-- <meta name="description" content="RefernEarn allows you to earn money by Typing or Downloading content. You can also refer your friends to earn Amazon vouchers"> -->
+  <meta name="description" content="Refer your friends to RefernEarn and earn Rs.500/- amazon GV for every successful referral. Earn as much as Rs.5000/-* by simply sharing your referral link.">
 
 
 
-  <title>Refer and Earn | Paymatrix</title>
+  <title>Refer and Earn | RefernEarn</title>
 
   <meta name="author" content="">
   <meta property= "fb:app_id" content="547485808751889">
