--- a/index.htm
+++ b/index.htm
@@ -14,8 +14,8 @@
   <meta name="author" content="">
   <meta property= "fb:app_id" content="547485808751889">
   <meta property= "og:site_name" content="Paymatrix">
-  <meta property= "og:title" content="Paymatrix: India's leading online rent payment &amp; collection platform">
-  <meta property= "og:url" content="https://paymatrix.in">
+  <meta property= "og:title" content="RefernEarn: India's leading online referring payment">
+  <meta property= "og:url" content="https://www.refernearn.ga">
   <meta property= "og:type" content="website">
   <meta property= "og:image:ur" content="http://paymatrix.in/images/logo_footer.png">
   <meta name="google-site-verification" content="FkQWXyo6sCeIYoIZB9870s0JhGrz3w50WXsPCtokOEY" />
