--- a/about.html
+++ b/about.html
@@ -11,8 +11,10 @@ permalink: /about/
             <img src="{{site.github.url}}/images/uploads/zises-photo.jpg">
       </div>
 		  <div class="text">
-		    <p>Bryan does the hard work, the long-shot work, the underdog work that topples the well-established and disrupts the status quo. He led Illinois' housing finance authority to be upgraded when peer state agencies were downgraded to junk; he ran successful bootstrapped political campaigns against the machine, and he recently helped his wife open Chicago’s first medical cannabis dispensary – the #1 Dispensary in Illinois in sales and in patient count since the day it opened. Bryan holds a bachelors degree in political science from the University of Chicago, a masters degree in film from the University of Southern California and a black belt in judo – where quite literally the bigger they are, the harder they fall.</p>
-        <p>Bryan does not change opinion; he changes how people think.</p>
+		    <p>At RefernEarn, we are all working towards to solve one key problem of the Referring and Data Entry market in India – To build trust and transparency between clients, customers. The idea emerged when one of us faced the problem of arranging funds for Date Entry program, wherein there was no options. When we deep dived into the market, we observed that the all the Data Entry jobs are no so genuine.</p>
+        <p>So We decided to change the program:</p>
+	<p><li>Refere friends make money to buy the data entry program</li></p>
+	<li>Help friends succeed along with you</li>
 		  </div>
 		</div>
   </div>
