--- a/contact.html
+++ b/contact.html
@@ -5,14 +5,14 @@ permalink: /contact/
 ---
 
 <div class="contact_form">
-							<h4 class="contact_form_heading">Send Us a Message <span class="pull-right"><img src="https://s3-ap-southeast-1.amazonaws.com/paymatrixuploads/static/new_home/send.png" class="sendmsg"></span></h4>
-							<div class=" form-group ">
+						<p>	<h4 class="contact_form_heading">Send Us a Message <span class="pull-right"><img src="https://s3-ap-southeast-1.amazonaws.com/paymatrixuploads/static/new_home/send.png" class="sendmsg"></span></h4></p>
+							<p><div class=" form-group ">
 								<label class="form-label js-hide-label" for="identity">Enter your Name</label>
 								<input type="text" class="form-control form-size discount-code ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required" id="identity" name="firstname" placeholder="Enter your name" value="" tabindex="2" ng-model="firstname" required="">
 								<span class="errors ng-hide" ng-show="contactForm.firstname.$touched &amp;&amp; contactForm.firstname.$invalid">
 								Please enter firstname
 								</span>
-							</div>
+							</div></p>
 							<div class=" form-group ">
 								<label class="form-label js-hide-label" for="email">Enter your Email</label>
 								<input type="email" class="form-control form-size discount-code ng-pristine ng-untouched ng-empty ng-valid-email ng-invalid ng-invalid-required ng-valid-pattern" ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/" id="email" name="email" placeholder="Enter your Email" value="" tabindex="2" ng-model="email" required="">
