--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,9 @@ permalink: /contact/
 ---
 
 <div class="contact_form">
-						<p>	<h4 class="contact_form_heading">Send Us a Message <span class="pull-right"><img src="https://s3-ap-southeast-1.amazonaws.com/paymatrixuploads/static/new_home/send.png" class="sendmsg"></span></h4></p>
-							<p><div class=" form-group ">
+<li>
+						<h4 class="contact_form_heading">Send Us a Message <span class="pull-right"><img src="https://s3-ap-southeast-1.amazonaws.com/paymatrixuploads/static/new_home/send.png" class="sendmsg"></span></h4></p>
+							<div class=" form-group ">
 								<label class="form-label js-hide-label" for="identity">Enter your Name</label>
 								<input type="text" class="form-control form-size discount-code ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required" id="identity" name="firstname" placeholder="Enter your name" value="" tabindex="2" ng-model="firstname" required="">
 								<span class="errors ng-hide" ng-show="contactForm.firstname.$touched &amp;&amp; contactForm.firstname.$invalid">
@@ -45,4 +46,5 @@ permalink: /contact/
 			          </div>
 			        </div>
 
+</li>
 						</div>
