--- a/contact.html
+++ b/contact.html
@@ -4,47 +4,48 @@ title: Contact
 permalink: /contact/
 ---
 
-<div class="contact_form">
-<p><li>
-						<h4 class="contact_form_heading">Send Us a Message <span class="pull-right"><img src="https://s3-ap-southeast-1.amazonaws.com/paymatrixuploads/static/new_home/send.png" class="sendmsg"></span></h4></p>
-							<div class=" form-group ">
-								<label class="form-label js-hide-label" for="identity">Enter your Name</label>
-								<input type="text" class="form-control form-size discount-code ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required" id="identity" name="firstname" placeholder="Enter your name" value="" tabindex="2" ng-model="firstname" required="">
-								<span class="errors ng-hide" ng-show="contactForm.firstname.$touched &amp;&amp; contactForm.firstname.$invalid">
-								Please enter firstname
-								</span>
-							</div></p>
-							<div class=" form-group ">
-								<label class="form-label js-hide-label" for="email">Enter your Email</label>
-								<input type="email" class="form-control form-size discount-code ng-pristine ng-untouched ng-empty ng-valid-email ng-invalid ng-invalid-required ng-valid-pattern" ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/" id="email" name="email" placeholder="Enter your Email" value="" tabindex="2" ng-model="email" required="">
-								<span class="errors ng-hide" ng-show="contactForm.email.$touched &amp;&amp; contactForm.email.$invalid">Please enter valid email address</span>
-							</div>
-							<div class=" form-group ">
-								<label class="form-label js-hide-label" for="mobile">Enter your Mobile number</label>
+<div class="popup-contactus" style="height: 690px;">
+                <span class="close-btn tran btn-Cpmclose"><i class="iconfont icon-guanbi"></i></span>
+                <h3>Contact us</h3>
+                <p>We're always happy to hear from you, We are looking forward to hear your suggestions and feedback.</p>
+                <div class="input-list">
+                            <span class="label label-title">Name
+                            </span>
+                    <input type="text" name="username" class="cu-input" placeholder="">
+                </div>
+                <div class="input-list">
+                            <span class="label label-title">E-mail
+                            </span>
+                    <input type="text" name="mail" class="cu-input" placeholder="">
+                </div>
+                <div class="input-list input-Typelist">
+                            <span class="label label-title">Topic
+                            </span>
+                    <input type="text" name="topic" class="cu-input cu-type" data-id="" placeholder="">
+                            <div class="dropDown-typeList">
+                                <ul>
+                                    <li data-id="1">Cooperation</li>
+                                    <li data-id="2">Account</li>
+                                    <li data-id="3">Download</li>
+                                    <li data-id="4">Infringement</li>
+                                    <li data-id="5">Others</li>
+                                </ul>
+                            </div>
+                </div>
+                <div class="input-list">
+                    <textarea id="contact_text" cols="30" rows="10" class="cu-input" placeholder="I would like to talk about..."></textarea>
+                </div>
+                <a href="javascript:;" class="btn-send">Send Message</a>
 
-								<input type="text" class="form-control form-size discount-code ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required ng-valid-pattern ng-valid-minlength ng-valid-maxlength" ng-minlength="10" ng-maxlength="10" id="mobile" name="mobile" ng-pattern="^[7-9][0-9]{9}$" placeholder="Enter your Mobile number" tabindex="2" ng-model="phone" ng-required="true" required="required">
-								<!-- <input type="text" class="form-control  form-size discount-code" id="mobile" name="mobile" placeholder="Enter your Mobile number" value="" tabindex="2" ng-pattern="regEx" ng-model="mobile" required> -->
-								<span class="errors ng-hide" ng-show="((registration.phone.$error.minlength || registration.phone.$error.maxlength) &amp;&amp; registration.phone.$dirty) ">phone number should be 10 digits</span>
-								<span class="errors ng-hide" ng-show="contactForm.mobile.$touched &amp;&amp; contactForm.mobile.$invalid">Please enter valid mobile number</span>
-							</div>
-							<div class=" form-group " style="height: auto;">
-								<label class="form-label js-hide-label" for="mobile">Message</label>
-								<textarea rows="3" class="form-control ng-pristine ng-untouched ng-empty ng-invalid ng-invalid-required" style="resize: none;" id="message" name="message" placeholder="Message" ng-model="message" required=""></textarea>
-								<span class="errors ng-hide" ng-show="contactForm.message.$touched &amp;&amp; contactForm.message.$invalid">Please enter Message</span>
-							</div>
+                <div class="window-contact-foot">
+                    <div class="window-contact-hr">
+                        <span>or</span>
+                    </div>
+                    
+                    <p class="window-contact-foot-text">Directly contact us via info@pngtree.com</p>
+                    <p class="window-contact-foot-text">Our partner contact address:</p>
+                    <p class="window-contact-foot-text"><a href="javascript:;" class="window-contact-foot-ctrl">Oceanpayment &gt;&gt;</a></p>
+                    <img class="window-contact-foot-img" src="" alt="" style="display: none">
 
-							<div>
-								<!-- <button type="button" ng-click="submitApplication()"  data-toggle="modal" data-target="#myModal2" class="kite_submit"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></button> -->
-								<button type="button" ng-click="submitApplication()" id="kite_submit_btn" class="btn btn-info btn-lg kite_submit"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></button>
-							</div>
-
-							<!-- <br> -->
-							<div class="row">
-			          <div class="textbox_padding" style="height:auto;">
-			            <div style="transform-origin: left top;-webkit-transform-origin: left top;" class="g-recaptcha" data-sitekey="6LedAV4UAAAAAH1kbBCYFRdwlSeBDY5fY0r7erDF"><div style="width: 304px; height: 78px;"><div><iframe src="https://www.google.com/recaptcha/api2/anchor?ar=1&amp;k=6LedAV4UAAAAAH1kbBCYFRdwlSeBDY5fY0r7erDF&amp;co=aHR0cHM6Ly9wYXltYXRyaXguaW46NDQz&amp;hl=en&amp;v=v1550471573786&amp;size=normal&amp;cb=8n665hrtgzrz" width="304" height="78" role="presentation" name="a-lydxisgze0hi" frameborder="0" scrolling="no" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-top-navigation allow-modals allow-popups-to-escape-sandbox"></iframe></div><textarea id="g-recaptcha-response" name="g-recaptcha-response" class="g-recaptcha-response" style="width: 250px; height: 40px; border: 1px solid rgb(193, 193, 193); margin: 10px 25px; padding: 0px; resize: none; display: none;"></textarea></div></div><!--data-theme="dark"-->
-									<span id="cap_error" style="color:red;"></span>
-			          </div>
-			        </div>
-
-</p></li>
-						</div>
+                </div>
+            </div>
