--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,8 @@
-
+---
+layout: page
+title: Contact
+permalink: /contact/
+---
 
 <div class="popup-contactus" style="height: 690px;">
                 <span class="close-btn tran btn-Cpmclose"><i class="iconfont icon-guanbi"></i></span>
@@ -38,7 +42,7 @@
                         <span>or</span>
                     </div>
                     
-                    <p class="window-contact-foot-text">Directly contact us via info@refernearn.ga</p>
+                    <p class="window-contact-foot-text">Directly contact us via info@pngtree.com</p>
                     <p class="window-contact-foot-text">Our partner contact address:</p>
                     <p class="window-contact-foot-text"><a href="javascript:;" class="window-contact-foot-ctrl">Oceanpayment &gt;&gt;</a></p>
                     <img class="window-contact-foot-img" src="" alt="" style="display: none">
